--- a/templates/components/_header.html.twig
+++ b/templates/components/_header.html.twig
@@ -1,7 +1,7 @@
 <div class="navbar bg-neutral-900 text-neutral-content shadow-lg fixed top-0 left-0 right-0 z-[1030]">
     <div class="flex-1">
-        <a class="btn btn-ghost normal-case">
-            <img src="./build/images/logo_crazyphone.png" class="h-10" alt="Crazy Phone" />
+        <a class="btn btn-ghost normal-case" href="{{ path('app_home') }}">
+            <img src="{{ asset('build/images/logo_crazyphone.png')}}" class="h-10" alt="Crazy Phone" />
         </a>
     </div>
     <div class="flex-none">
@@ -12,12 +12,16 @@
                 </a>
             </li>
             <li>
-                <a class="hover:text-neutral-content border border-transparent hover:border-neutral-content hover:rounded me-2">
+                <a class="hover:text-neutral-content border border-transparent hover:border-neutral-content hover:rounded me-2"
+                    href="{{ path('app_shop') }}"
+                >
                     <i class="fa-solid fa-cart-shopping me-1"></i>Boutique
                 </a>
             </li>
             <li>
-                <a class="hover:text-neutral-content border border-transparent hover:border-neutral-content hover:rounded">
+                <a class="hover:text-neutral-content border border-transparent hover:border-neutral-content hover:rounded"
+                    href="{{ path('app_contact') }}"
+                >
                     <i class="fa-solid fa-envelope me-1"></i>Contact
                 </a>
             </li>
