feat: maj boutique + homepage

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,6 +4,8 @@
 
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 
+@import "react-alice-carousel/lib/scss/alice-carousel.scss";
+
 .hero-overlay {
   --tw-bg-opacity: 0;
 }
