--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -29,11 +29,9 @@
                     <a class="btn btn-link bg-transparent me-1 hover:rounded border-transparent hover:border-white"
                        href="#contact"
                        title="SMS au {{ contactInformation('tel') }}"
-
                     >
                         <i class="fa-solid fa-mobile-screen fa-2x text-white"></i>
                     </a>
-
                 </div>
             </div>
         </div>
@@ -109,6 +107,8 @@
             </div>
         </div>
     </div>
+
+    <react-promos></react-promos>
 
     <div class="relative w-full h-[400px]">
         <img src="https://picsum.photos/1280/400?random=8'" class="object-cover h-[400px] w-full" />
