feat: About + fin Home

--- a/templates/components/_footer.html.twig
+++ b/templates/components/_footer.html.twig
@@ -1,6 +1,6 @@
 <footer class="footer footer-center p-10 bg-primary text-primary-content rounded">
     <div class="grid grid-flow-col gap-4">
-        <a class="link link-hover">A propos de nous</a>
+        <a class="link link-hover" href="{{ path('app_about') }}">A propos de nous</a>
         <a class="link link-hover" href="{{ path('app_shop') }}">Boutique</a>
         <a class="link link-hover" href="{{ path('app_contact') }}">Contact</a>
     </div>
