--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -37,7 +37,37 @@
         </div>
     </div>
 
-    <div class="w-full bg-neutral-900 text-neutral-content py-10">
+    <div class="relative w-full px-10 pt-10 pb-24 min-h-[400px]">
+        <h1 class="text-5xl w-full text-center mb-10">Promotions!!</h1>
+
+        <div class="grid min-[1040px]:grid-flow-col min-[1040px]:justify-around gap-8">
+        {% for promo in promotions %}
+            <div class="card card-side rounded-xl shadow-md max-[1040px]:w-full min-[1040px]:max-w-3xl">
+                <img src="{{ asset('uploads/' ~ promo.image) }}"
+                     alt="{{ promo.title }}"
+                     class="max-[540px]:hidden max-[1040px]:max-w-[250px] min-[1040px]:max-w-[45%] rounded-tl-box rounded-bl-box"
+                />
+                <div class="card-body">
+                    <h2 class="card-title">{{ promo.title }}</h2>
+                    <p>{{ promo.description|raw }}</p>
+                    {% if promo.coupon is not null %}
+                        <div class="card-actions justify-end">
+                            <span class="p-2 fs-2 rounded-xl bg-accent text-white hover:bg-primary">{{ promo.coupon }}</span>
+                        </div>
+                    {% endif %}
+                </div>
+            </div>
+        {% endfor %}
+        </div>
+    </div>
+
+    <div class="w-full flex justify-center absolute">
+        <a href="{{ path('app_shop') }}" class="btn btn-primary text-2xl mt-[-20px] z-[10] shadow-xl">
+            <i class="fa-solid fa-cart-shopping mr-2"></i>Parcourir la boutique
+        </a>
+    </div>
+
+    <div class="w-full bg-neutral-900 text-neutral-content py-24">
         <h1 class="text-5xl w-full text-center mb-10">Nos services</h1>
 
         <div class="grid lg:grid-cols-3 gap-6">
@@ -108,23 +138,7 @@
         </div>
     </div>
 
-    <react-promos></react-promos>
-
-    <div class="relative w-full h-[400px]">
-        <img src="https://picsum.photos/1280/400?random=8'" class="object-cover h-[400px] w-full" />
-        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-            <a href="#slide4" class="btn btn-circle">❮</a>
-            <a href="#slide2" class="btn btn-circle">❯</a>
-        </div>
-    </div>
-
-    <div class="w-full flex justify-center">
-        <a href="{{ path('app_shop') }}" class="btn btn-primary text-2xl mt-[-20px] z-[10] shadow-xl">
-            <i class="fa-solid fa-cart-shopping mr-2"></i>Parcourir la boutique
-        </a>
-    </div>
-
-    <div class="w-full p-10 min-h-[450px]">
+    <div class="w-full p-10 min-h-[400px]">
         <h1 class="text-5xl w-full text-center mb-10">Témoignages</h1>
 
         <div class="w-full py-15 flex flex-col lg:flex-row gap-6">
