--- a/templates/components/_header.html.twig
+++ b/templates/components/_header.html.twig
@@ -7,7 +7,9 @@
     <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
             <li>
-                <a class="hover:text-neutral-content border border-transparent hover:border-neutral-content hover:rounded me-2">
+                <a class="hover:text-neutral-content border border-transparent hover:border-neutral-content hover:rounded me-2"
+                   href="{{ path('app_about') }}"
+                >
                     <i class="fa-solid fa-people-group me-1"></i>A propos de nous
                 </a>
             </li>
