--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -142,65 +142,25 @@
         <h1 class="text-5xl w-full text-center mb-10">Témoignages</h1>
 
         <div class="w-full py-15 flex flex-col lg:flex-row gap-6">
+            {% for review in reviews %}
             <div class="chat chat-start lg:basis-1/3">
                 <div class="chat-image avatar">
                     <div class="w-10 rounded-full">
-                        <img src="https://picsum.photos/80/80?random=1" alt="Avatar Mme Michue" />
+                        <img src="{{ review.profilePhotoUrl }}" alt="Avatar de {{ review.authorName }}" />
                     </div>
                 </div>
                 <div class="chat-header mb-1">
-                    Mme Michue
-                    <time class="text-xs opacity-40 ml-3">il y a un mois</time>
+                    {{ review.authorName }}
+                    <time class="text-xs opacity-40 ml-3">{{ review.relativeTimeDescription }}</time>
                 </div>
-                <div class="chat-bubble bg-neutral-900 text-neutral-content">Très bon accueil. Prise en charge très rapide du téléphone iphone qui s est verrouillé. Déverrouillage rapide avec mot de passe. Beaucoup de temps passé. N hésitez pas à y aller. Super prix et super accueil.</div>
+                <div class="chat-bubble bg-neutral-900 text-neutral-content">{{ review.text }}</div>
                 <div class="chat-footer">
-                    <i class="fa-solid fa-star text-warning"></i>
-                    <i class="fa-solid fa-star text-warning"></i>
-                    <i class="fa-solid fa-star text-warning"></i>
-                    <i class="fa-solid fa-star text-warning"></i>
-                    <i class="fa-solid fa-star text-warning"></i>
+                    {% for i in 1..review.rating %}
+                        <i class="fa-solid fa-star text-warning"></i>
+                    {% endfor %}
                 </div>
             </div>
-
-            <div class="chat chat-start lg:basis-1/3">
-                <div class="chat-image avatar">
-                    <div class="w-10 rounded-full">
-                        <img src="https://picsum.photos/80/80?random=1" alt="Avatar Mme Michue" />
-                    </div>
-                </div>
-                <div class="chat-header mb-1">
-                    Mme Michue
-                    <time class="text-xs opacity-40 ml-3">il y a un mois</time>
-                </div>
-                <div class="chat-bubble bg-neutral-900 text-neutral-content">Professionnel au top ! Échanges rapides et complets par SMS. Transparence de la réparation, du prix. La qualité du materiel et la compétence du Professionnel font de crazy Phone une adresse à recommander sans hésiter. Encore merci à vs</div>
-                <div class="chat-footer">
-                    <i class="fa-solid fa-star text-warning"></i>
-                    <i class="fa-solid fa-star text-warning"></i>
-                    <i class="fa-solid fa-star text-warning"></i>
-                    <i class="fa-solid fa-star text-warning"></i>
-                    <i class="fa-solid fa-star text-warning"></i>
-                </div>
-            </div>
-
-            <div class="chat chat-start lg:basis-1/3">
-                <div class="chat-image avatar">
-                    <div class="w-10 rounded-full">
-                        <img src="https://picsum.photos/80/80?random=1" alt="Avatar Mme Michue" />
-                    </div>
-                </div>
-                <div class="chat-header mb-1">
-                    Mme Michue
-                    <time class="text-xs opacity-40 ml-3">il y a un mois</time>
-                </div>
-                <div class="chat-bubble bg-neutral-900 text-neutral-content">minutieux, rapide et agréable très bon travail, mon téléphone es comme neuf ! je recommande fortement ! Merci encore</div>
-                <div class="chat-footer">
-                    <i class="fa-solid fa-star text-warning"></i>
-                    <i class="fa-solid fa-star text-warning"></i>
-                    <i class="fa-solid fa-star text-warning"></i>
-                    <i class="fa-solid fa-star text-warning"></i>
-                    <i class="fa-solid fa-star text-warning"></i>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 
